PDFBOX-5660: remove deprecated
git-svn-id: https://svn.apache.org/repos/asf/pdfbox/trunk@1923024 13f79535-47bb-0310-9956-ffa450edef68